# quickdish-backend

./: .gitignore  Docker.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
api/: __init__.py
api/configuration/: __init__.py
api/crud/: admin.py  canteen.py  customer.py  menu.py  merchant.py  order.py  restaurant.py
api/dependencies/: event.py  id.py  order.py  state.py
api/dependency/: __init__.py  customer.py  id.py
api/errors/: __init__.py  authentication.py  internal.py
api/event/: __init__.py
api/models/: RefreshToken.py  Tag.py  __init__.py  canteen.py  customer.py  menu.py  merchant.py  order.py  restaurant.py
api/routers/: admin.py  canteen.py  customer.py  event.py  menu.py  merchant.py  order.py  restaurant.py
api/schemas/: Tag.py  authentication.py  canteen.py  customer.py  event.py  menu.py  merchant.py  order.py  restaurant.py  session.py
api/state/: __init__.py
api/tests/: __init__.py  conftest.py  customer.py  favorite_restaurant.py  order.py  restaurant.py  search.py  tag.py
api/types/: point.py
migrations/: env.py
migrations/versions/: 173998d0ded4_.py  2a108b266e87_.py  2a108b266e87_inital.py  316ccfb520f6_add_order.py  32efaca7c7d5_create_customization.py  461d261c81c8_initial_commit.py  461d261c81c8_merchant_id_not_nullable.py  4d198063ad02_add_favorite.py  58d7b98450d5_price_and_time_checking.py  5a3419814f3a_add_restaurant_open_close_status.py  5c4e328434e9_add_foreign_key_constraint_to_canteen_.py  7ada867aef4c_added_userreview_table.py  (+10 more)
myenv/: pyvenv.cfg
(+1 files in other folders)
